# ota-updater

./: .clang-format  CMakeLists.txt  README.md  conanfile.txt  ota.sh  run_build_unit_test.sh  setup_and_build.sh  test.json
cmake/: aarch64-linux-gnu.cmake
conan/profiles/: linux-aarch64-gcc  linux-x86_64-release
include/crypto/: sha256.hpp
include/flash/: archive_extractor.hpp  archive_installer.hpp  archive_path_policy.hpp  component_installers.hpp  config_json_utils.hpp  counting_reader.hpp  device_config.hpp  flasher_engine.hpp  gzip_reader.hpp  io.hpp  manifest.hpp  manifest_parser.hpp  manifest_selector.hpp  mount_session.hpp  ota_install_services.hpp  ota_installer.hpp  path_utils.hpp  progress_sinks.hpp  result.hpp  sha256.hpp  staging_verifier.hpp  tar_stream_extractor.hpp  tar_stream_reader_adapter.hpp  update_module.hpp  update_policy.hpp  version_comparator.hpp
include/io/: counting_reader.hpp  fd.hpp  file_reader.hpp  gzip_reader.hpp  io.hpp  partition_writer.hpp
include/ota/: archive_installer.hpp  archive_path_policy.hpp  component_installers.hpp  mount_session.hpp  ota_bundle_reader.hpp  ota_install_services.hpp  ota_installer.hpp  progress.hpp  progress_sinks.hpp  staging_verifier.hpp  tar_stream_extractor.hpp  tar_stream_reader_adapter.hpp  update_module.hpp
include/system/: signals.hpp
include/util/: config_json_utils.hpp  config_parser.hpp  device_config.hpp  logger.hpp  manifest.hpp  manifest_parser.hpp  manifest_selector.hpp  path_utils.hpp  result.hpp  update_policy.hpp  version_comparator.hpp
scripts/: clang_format.sh  static_scan.sh
src/: archive_extractor.cpp  archive_installer.cpp  archive_path_policy.cpp  component_installers.cpp  config_json_utils.cpp  config_parser.cpp  device_config.cpp  flasher.cpp  flasher_engine.cpp  gzip_reader.cpp  logger.cpp  main.cpp  manifest.cpp  manifest_parser.cpp  manifest_selector.cpp  mount_session.cpp  ota_install_services.cpp  ota_installer.cpp  partition_writer.cpp  progress_sinks.cpp  sha256.cpp  staging_verifier.cpp  tar_stream_extractor.cpp  tar_stream_reader_adapter.cpp  update_module.cpp  update_policy.cpp  version_comparator.cpp
src/crypto/: sha256.cpp
src/io/: fd.cpp  file_reader.cpp  gzip_reader.cpp  partition_writer.cpp
src/ota/: archive_installer.cpp  archive_path_policy.cpp  component_installers.cpp  mount_session.cpp  ota_bundle_reader.cpp  ota_install_services.cpp  ota_installer.cpp  progress_sinks.cpp  staging_verifier.cpp  tar_stream_extractor.cpp  tar_stream_reader_adapter.cpp  update_module.cpp
src/system/: signals.cpp
src/util/: config_json_utils.cpp  config_parser.cpp  console_progress.cpp  device_config.cpp  logger.cpp  manifest.cpp  manifest_parser.cpp  manifest_selector.cpp  update_policy.cpp  version_comparator.cpp
tests/: CMakeLists.txt  test_archive_extractor.cpp  test_archive_path_policy.cpp  test_fd.cpp  test_file_reader.cpp  test_gzip_reader.cpp  test_manifest.cpp  test_manifest_selector.cpp  test_mount_session.cpp  test_ota_bundle_reader.cpp  test_ota_fullchain.cpp  test_ota_install_services.cpp  test_partition_writer.cpp  test_path_utils.cpp  test_sha256.cpp  test_staging_verifier.cpp  test_tar_stream_extractor.cpp  test_update_module.cpp  testing.hpp
